--- a/2.2.1. spring_hibernate/src/main/resources/db.properties
+++ b/2.2.1. spring_hibernate/src/main/resources/db.properties
@@ -1,10 +1,13 @@
-# MySQL properties
-db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/spring_hiber?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
-db.username=root
-db.password=root
+# JDBC ?????????
+hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
+hibernate.connection.url=jdbc:mysql://localhost:3306/2.2.1
+hibernate.connection.username=root
+hibernate.connection.password=1337
 
-# Hibernate properties
-hibernate.show_sql=true
+# Hibernate ?????????
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.hbm2ddl.auto=update
+hibernate.show_sql=true
+hibernate.format_sql=true
 
+hibernate.archive.autodetection=class
